# PreferredItemProblem

./: CMakeLists.txt
src/: brick.cpp  brick.h  item.cpp  item.h  main.cpp  masterData.cpp  masterData.h  preferredItem.cpp  preferredItem.h  serviceFunctions.cpp  serviceFunctions.h  testCases.cpp
